force-app/main/default/objects/FSM_SapOAuthServiceConfig__mdt/FSM_SapOAuthServiceConfig__mdt.object-meta.xml
<CustomObject>
    <description>Created as part of SFI-1213</description>
    <label>Sap OAuth Service Config</label>
    <pluralLabel>Sap OAuth Service Config</pluralLabel>
</CustomObject>