force-app/main/default/objects/FSM_SapOAuthServiceConfig__mdt/fields/FSM_EnvironmentName__c.field-meta.xml
<CustomField>
    <fullName>FSM_EnvironmentName__c</fullName>
    <description>created as part of SFI-1213</description>
    <label>Environment Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fsmdev1</fullName>
                <default>true</default>
                <label>fsmdev1</label>
            </value>
            <value>
                <fullName>fsmqa1</fullName>
            </value>
            <value>
                <fullName>fsmintgdev</fullName>
            </value>
            <value>
                <fullName>fsmintgqa1</fullName>
            </value>
            <value>
                <fullName>PROD</fullName>
            </value>
            <value>
                <fullName>fsmuat1</fullName>
            </value>
            <value>
                <fullName>training</fullName>
            </value>
            <value>
                <fullName>BAU Dev</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
                <isActive>false</isActive>
                <label>UAT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>