force-app/main/default/objects/FSM_SapOAuthServiceConfig__mdt/fields/FSM_NamedCredential__c.field-meta.xml
<CustomField>
    <fullName>FSM_NamedCredential__c</fullName>
    <description>SFI-1213</description>
    <label>Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>