force-app/main/default/objects/FSM_SapOAuthServiceConfig__mdt/fields/FSM_NamedCredentialINT15__c.field-meta.xml
<CustomField>
    <fullName>FSM_NamedCredentialINT15__c</fullName>
    <description>Created as part of SFI-2161</description>
    <label>Named Credential INT15</label>
    <length>80</length>
    <type>Text</type>
</CustomField>