force-app/main/default/objects/FSM_SapOAuthServiceConfig__mdt/fields/FSM_VendorId__c.field-meta.xml
<CustomField>
    <fullName>FSM_VendorId__c</fullName>
    <label>Vendor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>